--- a/src/main/scala/com/asto/dmp/elem/prop.properties
+++ b/src/main/scala/com/asto/dmp/elem/prop.properties
@@ -7,6 +7,6 @@ mail_subject=“生意参谋-御膳房”项目出异常了！
 ## mail_bcc=
 mail_to_fraud=fengtt@asto-inc.com
 mail_to_score=yewb@asto-inc.com
-mail_to_zhunru=lij@asto-inc.com
+mail_to_approve=lij@asto-inc.com
 mail_to_credit=lingx@asto-inc.com
 mail_to_loan_after=liuw@asto-inc.com
